--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 :root {
   --mainFont: 'Open Sans', sans-serif;
+  --secondColor: #9f8ad0;
+  scroll-behavior: smooth;
 }
 
 
@@ -11,4 +13,347 @@
 
 body {
   font-family: var(--mainFont);
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  overflow: hidden;
+  margin: auto;
+  padding: 60px 0;
+}
+
+header {
+  height: 100vh;
+  background-image: linear-gradient(to top, rgba(254, 173, 166, 0.4) 0%, rgba(245, 239, 239, 0.4) 100%), url(../img/front.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+.head {
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: rgb(37, 37, 37);
+}
+
+.hamburger {
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  background: white;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 0 7px rgba(122, 102, 121, 0.5);
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 30vw;
+  height: 100%;
+  background-image: linear-gradient(to bottom, #1a1919 0%, black 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 0 0 6px rgba(122, 102, 121, 0.5);
+  transform: translate(110%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.spread {
+  transform: translate(0);
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+}
+
+.menu a:hover {
+  border-bottom: 10px solid rgba(221, 224, 49, 0.89);
+  transition: all 0.1s ease-in-out;
+  width: 80%;
+  text-align: center;
+}
+
+.title {
+  width: 30%;
+  font-size: 90px;
+  margin-bottom: 15px;
+  text-shadow: 0 0 1px rgba(207, 38, 123, 0.8), 10px 10px 1px rgba(221, 224, 49, 0.89);
+}
+
+.copy {
+  font-weight: 300;
+  font-size: 25px;
+  border-bottom: 10px solid rgba(221, 224, 49, 0.89);
+}
+
+/* Services */
+
+.subtitle {
+  text-align: center;
+  font-weight: 300;
+  color: var(--secondColor);
+  margin-bottom: 40px;
+  font-size: 40px;
+  /* border-bottom: 10px solid rgba(221, 224, 49, 0.89); */
+}
+
+.container-service {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.container-service img {
+  width: 40%;
+}
+
+.checklist-service {
+  width: 45%;
+}
+
+.service {
+  margin-bottom: 20px;
+}
+
+.n-service {
+  margin-bottom: 7px;
+  color: var(--secondColor);
+}
+
+.number {
+  display: inline-block;
+  background-image: linear-gradient(to bottom, #1a1919 0%, black 100%);
+  width: 30px;
+  height: 30px;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+/* Work */
+
+.work {
+  background-color: #f2f2f2;
+}
+
+.container-work {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.work-img {
+  object-fit: cover;
+  width: 30%;
+  display: block;
+  margin-bottom: 15px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.image-light {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(100%);
+  transition: transform .2s ease-in-out;
+}
+
+.show {
+  transform: translate(0);
+}
+
+.add-image {
+  width: 60%;
+  border-radius: 10px;
+  transform: scale(0);
+  transition: transform 0.3s .2s;
+  object-fit: cover;
+}
+
+.show-image {
+  transition: scale(1);
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 40px;
+  cursor: pointer;
+}
+
+/* Expertise */
+
+.experts {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.cont-expert {
+  width: 30%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.cont-expert img {
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+}
+
+.n-expert {
+  display: inline-block;
+  margin-top: 20px;
+  width: 100%;
+  font-weight: 400;
+}
+
+/* Footer */
+
+footer {
+  background-image: linear-gradient(to bottom, #1a1919 0%, black 100%);
+  padding-bottom: 0.1px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.contact-us {
+  width: 50%;
+  color: #fff
+}
+
+.brand {
+  font-weight: 400;
+  font-size: 40px;
+}
+
+.brand+p {
+  font-weight: 700;
+}
+
+.social-media {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.social-media-icon {
+  display: inline-block;
+  margin-left: 20px;
+  width: 60px;
+  height: 60px;
+  border: 1px solid white;
+  border-radius: 50%;
+  text-align: center;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+.social-media-icon:hover {
+  background: white;
+  color: var(--secondColor);
+}
+
+.line {
+  width: 90%;
+  max-width: 1200px;
+  height: 2px;
+  margin: 0 auto;
+  background: black;
+  margin-bottom: 60px;
+}
+
+@media (max-width: 800px) {
+  .menu {
+    width: 50vw;
+  }
+
+  .title {
+    width: 80%;
+    font-size: 70px;
+  }
+
+  .copy {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .container-service img {
+    width: 80%;
+    margin-bottom: 40px;
+  }
+
+  .checklist-service {
+    width: 80%;
+  }
+
+  .service {
+    margin-bottom: 30px;
+  }
+
+  .add-image {
+    width: 80%;
+  }
+
+  .work-img {
+    width: 45%;
+  }
+
+  .cont-expert {
+    width: 80%;
+  }
+
+  .footer-content {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .contact-us {
+    width: 80%;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .social-media {
+    width: 80%;
+    justify-content: space-evenly;
+  }
+
+  .social-media-icon {
+    margin-left: 0;
+  }
 }
