--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,12 @@ header {
   position: fixed;
   top: 30px;
   right: 30px;
-  background: white;
+  background: rgb(255, 255, 255, 0.8);
   width: 40px;
   height: 40px;
   cursor: pointer;
-  border-radius: 10px;
-  box-shadow: 0 0 7px rgba(122, 102, 121, 0.5);
+  border-radius: 1px;
+  /* box-shadow: 0 0 3px rgba(122, 102, 121, 0.5); */
 }
 
 .menu {
@@ -68,6 +68,7 @@ header {
   box-shadow: 0 0 6px rgba(122, 102, 121, 0.5);
   transform: translate(110%);
   transition: transform 0.3s ease-in-out;
+  font-size: 25px;
 }
 
 .spread {
